--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -39,6 +39,9 @@
       {% if author.email2 %}
         <li class="author__desktop"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ author.email2 }}</a></li>
       {% endif %}
+      {% if author.email2bis %}
+        <li class="author__desktop"></i>{{ author.email2bis }}</a></li>
+      {% endif %}
 
       <!-- Font Awesome and Academicons icons / Academic websites -->
       {% if author.arxiv %}
